<resources>
    <string name="app_name">JetPackLean</string>

    <string name="app_img_describe">this is a image</string>
    <string name="app_welcome_describe">Navigation Leaning is a App for lean how to user JetPack Androidx. if you want lean more about sneakers Let\'s begin</string>
    <string name="app_welcome_button_login">Have a account ? Login</string>
    <string name="app_welcome_button_register">Join us</string>

    <string name="app_login_welcome">Welcome to JatPack</string>
    <string name="app_login_name">Name</string>
    <string name="app_login_password">password</string>
    <string name="app_login_sing_in">sing in</string>

    <string name="app_register_welcome">Welcome join us</string>
    <string name="app_register_email">email</string>
    <string name="app_register_account">user account</string>
    <string name="app_register_password">password</string>
    <string name="app_register_submit">submit</string>
    
    <string name="app_main_home">home</string>
    <string name="app_main_market">market</string>
    <string name="app_main_user">mine</string>

</resources>
