<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wel_imageView"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_img_describe"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_bg" />

    <TextView
        android:id="@+id/wel_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/app_welcome_describe"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wel_imageView" />

    <Button
        android:id="@+id/wel_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_blue_radius_10"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/app_welcome_button_login"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wel_textView" />

    <Button
        android:id="@+id/wel_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_blue_radius_10"
        android:text="@string/app_welcome_button_register"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/wel_button_login"
        app:layout_constraintStart_toStartOf="@+id/wel_button_login"
        app:layout_constraintTop_toBottomOf="@+id/wel_button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>