<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--需要的viewModel，通过mBing.vm= mViewModel注入-->
        <variable
            name="model"
            type="com.jetpack.lean.login.viewmodel.LoginModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_img_describe"
            android:onClick="@{()->model._fragment.requireActivity().onBackPressed()}"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left_blue" />

        <TextView
            android:id="@+id/login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/app_login_welcome"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_blue_stroke"
            android:drawableStart="@drawable/ic_user_avatar"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/app_login_name"
            android:inputType="textPersonName"
            android:onTextChanged="@{(text, start, before, count)->model.onNameChanged(text)}"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@{model.n.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_textView"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/login_editTextTextPersonPassword"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_blue_stroke"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/app_login_password"
            android:inputType="textPassword"
            android:onTextChanged="@{(text, start, before, count)->model.onPwdChange(text)}"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@{model.p.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_editTextTextPersonName"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/selector_button"
            android:enabled="@{!model.n.empty|| !model.p.empty}"
            android:onClick="@{()->model.userLogin()}"
            android:text="@string/app_login_sing_in"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_editTextTextPersonPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
